fix: resolve postgresql bytea mapping and fix resource loading in jar environment